welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:4: error: reassignment to val
if (a=b){
     ^sumDouble:5: error: recursive variable prout needs type
	prout = 2*(a+b) ;
        ^