welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
	var prout =

if (a=b){
	prout = 2*(a+b) ;
}
if (a<b||a>b){
	prout=a+b
}
return prout; 
}